--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-DB_HOST='localhost'
-DB_USER='root'
-DB_PASSWORD=''
+DB_HOST='127.0.0.1'
+DB_USER='personal_blog'
+DB_PASSWORD='LEYPEnNGLSrbJCKa'
 DB_DATABASE='personal_blog'
 
 DB_PORT='3306'
