--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST='127.0.0.1'
 DB_USER='personal_blog'
-DB_PASSWORD='LEYPEnNGLSrbJCKa'
+DB_PASSWORD='LEYPEnNGLSrbJCK'
 DB_DATABASE='personal_blog'
 
 DB_PORT='3306'
