--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "build": "node app.js"
+    "build": "node --env-file=.env app.js"
   },
   "keywords": [],
   "author": "",
